--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Ali Rouhani</h1>
+<p>I also received my M.Sc. in Industrial Engineering from Shahed University in 2018.</p>
 </body>
 </html>
