--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Ali Rouhani</h1>
-<p>I also received my M.Sc. in Industrial Engineering from Shahed University in 2018.</p>
+<p>I received my M.Sc. in Industrial Engineering from Shahed University in 2018.</p>
 </body>
 </html>
