--- a/activities.html
+++ b/activities.html
@@ -19,7 +19,6 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="talks.html">Talks</a></div>
-<div class="menu-item"><a href="media.html">Media&nbsp;Mentions</a></div>
 <div class="menu-item"><a href="activities.html" class="current">Activities</a></div>
 </td>
 <td id="layout-content">
@@ -28,49 +27,7 @@
 </div>
 <h2>Reviewer</h2>
 <ul>
-<li><p>SIAM Journal on Optimization, INFORMS Journal on Computing, European Journal of Operational Research, Journal of Global Optimization, IISE Transactions, Naval Research Logistics, Computers & Operations Research, Mathematical Reviews, Computers & Industrial
-Engineering, IEEE Transactions on Intelligent Vehicles, Journal of Industrial and Management Optimization.</p>
-</li>
-</ul>
-<h2>Conference and Workshop Organization</h2>
-<ul>
-<li><p><b>Session Chair</b>: INFORMS Annual Meeting 2020 in Optimization Society Cluster, <i>Discrete Stochastic and Distributionally Robust Optimization</i></p>
-</li>
-<li><p><b>Session Chair</b>: INFORMS Annual Meeting 2019 in Computing Society Cluster, <i>Recent Advances in Learning and Distributionally Robust Optimization I and II</i></p>
-</li>
-<li><p><b>Session Chair</b>: INFORMS Annual Meeting 2018 jointly in Computing and Optimization Society Clusters, <i>Stochastic and Distributionally Robust Optimization</i></p>
-</li>
-<li><p><b>Session Chair</b>: INFORMS Annual Meeting 2017 in Optimization under Uncertainty Cluster, <i>Distributionally Robust Stochastic Programming</i></p>
-</li>
-<li><p><b>Session Chair</b>: IISE Annual Conference and Expo 2017, Logistics & Supply Chain Track, <i>Inventory Management in Supply Chains</i></p>
-</li>
-<li><p><b>Volunteer</b>: Mixed-Integer Programming Workshop 2014</p>
-</li>
-</ul>
-<h2>Professional Organizations</h2>
-<ul>
-<li><p><b>President</b>, INFORMS Student Chapter at The Ohio State University, February 2014&ndash;April 2016</p>
-<ul>
-<li><p>The Chapter won <b>INFORMS Magna Cum Laude award</b> in 2016</p>
-</li>
-<li><p>The Chapter won <b>INFORMS Cum Laude award</b> in 2015</p>
-</li>
-</ul>
-
-</li>
-</ul>
-<h2>Professional Society Memberships</h2>
-<ul>
-<li><p><a href="https://www.siam.org">Society of Industrial and Applied Mathematics (SIAM)</a></p>
-</li>
-<li><p><a href="http://mathprog.org">Mathematical Optimization Society (MOS)</a></p>
-</li>
-<li><p><a href="https://www.informs.org">Institute for Operations Research and Management Sciences (INFORMS)</a>, INFORMS Optimization Society, INFORMS Computing Society,  Manufacturing & Service Operations Management Society</p>
-</li>
-<li><p><a href="https://www.iise.org">Institute of Industrial and Systems Engineers (IISE)</a></p>
-</li>
-<li><p><a href="https://www.asce.org">American Society of Civil Engineers (ASCE)</a>, Environmental & Water Resources Institute (EWRI)
-</p>
+<li><p> European Journal of Operational Research, International Journal of Production Research, Operational Research, Journal of Quality Engineering and Production Optimization.</p>
 </li>
 </ul>
 <div id="footer">
