--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">menu</div>
+<div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="talks.html">Talks</a></div>
@@ -28,7 +28,7 @@
 <table class="imgtable"><tr><td>
 <a href="https://alirouhani.github.io/index.html">a>&nbsp;</td>
 <td align="left"><p>Graduated Master Student <br />
-E-mail: <a href="mailto:a.rouhani@shahed.ac.ir/"> a.rouhani@shahed.ac.ir </a></p>
+E-mail: <a href="mailto:a.rouhani@shahed.ac.ir/">a.rouhani@shahed.ac.ir</a></p>
 </td></tr></table>
 <a href=" https://scholar.google.com/citations?user=lHCRyh0AAAAJ&hl=en"> <i class="ai ai-google-scholar-square ai-2x"></i></a>
 <a href="https://www.researchgate.net/profile/Ali_Rouhani2"> <i class="ai ai-researchgate-square ai-2x"></i></a>
