--- a/talks.html
+++ b/talks.html
@@ -19,52 +19,15 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="talks.html" class="current">Talks</a></div>
-<div class="menu-item"><a href="media.html">Media&nbsp;Mentions</a></div>
 <div class="menu-item"><a href="activities.html">Activities</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Invited Talks and Posters</h1>
 </div>
-<h2>Invited talks</h2>
-<ul>
-<li><p><b>Joint Stocking and Pricing Decisions For Distributionally Robust Inventory Problems with Decision-Dependent Demands</b>, <i>INFORMS Annual Meeting</i>, October 20&ndash;23, 2019, Seattle, WA.</p>
-</li>
-<li><p><b>Prescriptive Static Stochastic Programming</b>, <i>INFORMS Annual Meeting</i>, October 20&ndash;23, 2019, Seattle, WA.</p>
-</li>
-<li><p><b>Distributionally Robust Newsvendor with Variation Distance: Calibration under Limited Information and Application to Reserving Operating Room Time</b>, <i>INFORMS Annual Meeting</i>, November 4&ndash;7, 2018, Phoenix, AZ.</p>
-</li>
-<li><p><b>Effective Scenarios in Multistage Distributionally Robust Stochastic Programs with Total Variation Distance</b>, <i>INFORMS Optimization Society Conference</i>, Macrh 23&ndash;25, 2018, Denver, Co. </p>
-</li>
-<li><p><b>Distributionally Robust Newsvendor Problem with Variation Distance</b>, <i>INFORMS Annual Meeting</i>, October 22&ndash;25, 2017, Houston, TX. </p>
-</li>
-<li><p><b>Distributionally Robust Newsvendor Problem with Variation Distance</b>, <i>IISE Annual Conference and Expo</i>, May 20&ndash;23, 2017, Pittsburgh, PA. </p>
-</li>
-<li><p><b>Distributionally Robust Newsvendor Problem with Variation Distance</b>, <i>IISE Annual Conference and Expo</i>, Doctoral Students Colloquium, May 20&ndash;23, 2017, Pittsburgh, PA. </p>
-</li>
-<li><p><b>Distributionally Robust Newsvendor Problem with Variation Distance</b>, <i>INFORMS Annual Meeting</i>, November 13&ndash;16, 2016, Nashville, TN. </p>
-</li>
-<li><p><b>Identification of Effective Scenarios in Distributionally Robust Stochastic Programs with Variation Distance</b>, <i>INFORMS Optimization Society Conference</i>, March 17&ndash;19, 2016, Princeton, NJ. </p>
-</li>
-<li><p><b>Ambiguous Stochastic Programs with Variation Distance</b>, <i>INFORMS Annual Meeting</i>, November 1&ndash;4, 2015, Philadelphia, PA. </p>
-</li>
-<li><p><b>Distributionally Robust Stochastic Programs with Variation Distance</b>, <i>22nd International Symposium on Mathematical Programming (ISMP)</i>, July 12&ndash;17, 2015, Pittsburgh, PA.</p>
-</li>
-<li><p><b>Decomposition Algorithms for Mean-CVaR Multistage Stochastic Linear Programs</b>, <i>INFORMS Annual Meeting</i>, November 8&ndash;12, 2014, San Francisco, CA. </p>
-</li>
-</ul>
 <h2>Posters</h2>
 <ul>
-<li><p><b>Effective Scenarios in Data-Driven Multistage Distributionally Robust Stochastic Optimization: Application to Water Resources Management</b>, <i>Mathematical Optimization of Systems Impacted by Rare, High-Impact Random Events</i>, June 24&ndash;28, 2019, Providence, RI.</p>
-</li>
-<li><p><b>Distributionally Robust Newsvendor Problem with Variation Distance</b>, <i>Department of Integrated Systems Engineering Welcome Orientation</i>, The Ohio State University, August 21, 2017, Columbus, OH. </p>
-</li>
-<li><p><b>Distributionally Robust Stochastic Programs with Variation Distance</b>, <i>Graduate Engineering Research Colloquium</i>, The Ohio State University, Ocotober 2, 2015, Columbus, OH.</p>
-</li>
-<li><p><b>Distributionally Robust Stochastic Programs with Variation Distance</b>,  <i>Department of Integrated Systems Engineering Welcome Orientation</i>, The Ohio State University, August 24, 2015, Columbus, OH. </p>
-</li>
-<li><p><b>A Risk-Averse Approach to Optimal Water Allocation under Supply and Demand Uncertainty</b>, <i>Graduate Engineering Research Colloquium</i>, The Ohio State University, OCtober 6, 2014, Columbus, OH. </p>
-</li>
+<li><p><b>Data Driven Optimization</b>, <i>Department of Engineering</i>, The Shahed University, August 21, 2019, Tehran. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
