--- a/publications.html
+++ b/publications.html
@@ -27,9 +27,16 @@
 </div>
 <h2>Preprints and Submitted Papers</h2>
 <ul>
-<li><p><b>Cross Dual Decomposition for Optimizing Liner Shipping Fleet Repositioning Plans</b>, with A. Koberstein</p>
+<li><p><b>Cross Dual Decomposition for Optimizing Liner Shipping Fleet Repositioning Plans</b>, with A. Koberstein
+</p>
+</article> 
+</li>
+</ul>   
+</li>
+</ul>
 <ul>
-<li><p><b>Mitigating ripple and bullwhip effects in the supply chain via capacity allocation and user cooperation</b>, with H. Jahani, D. Ivanov, W. Klibi </p>
+<li><p><b>Mitigating ripple and bullwhip effects in the supply chain via capacity allocation and user cooperation</b>, with H. Jahani, D. Ivanov, W. Klibi 
+</p>
 <ul>
 <article><p><b>Abstract</b>: 
 Capacity allocation and cooperative users are growing research areas in supply chain (SC) management; however, the consideration of these novel approaches with disruption propagation effects - namely ripple and bullwhip effects - is scarce. In this study, an SC network containing facilities, normal users, and cooperative users is considered in which the cooperative users possess inventories and can help facilities supply normal users as well. We aim to control the ripple effect by considering the robust optimisation approach and dynamically adjusting the disrupted capacity of facilities. We also manage the bullwhip effect by adjusting the inventories of the cooperative users with a multi-stage stochastic programming formulation. The capacity is allocated to each facility in the worst-case scenario to control future capacity disruptions. Therefore, the worst-case capacity allocation and inventory management can confront the facility capacity disruption in both reactive and proactive ways. Regarding the solution approach, a multi-stage stochastic programming and a robust optimisation approach are developed to control random and deep uncertainties. A suitable scenario tree is constructed by generating scenarios using a Latin Hypercube Sampling method and reducing the scenario tree by applying a forward scenario construction technique. To overcome challenges in solving largescale problems, a hybrid dual decomposition algorithm is suggested based on updating Lagrangian multiplier sets with the combination of cutting plane, sub-gradient, and trust region strategies. The proposed solution algorithm is equipped by Rolling Horizon Heuristic to find a proper upper bound. The outcomes of this research can help decision-makers analyse the value of cooperative users in mitigating ripple and bullwhip
