--- a/publications.html
+++ b/publications.html
@@ -27,17 +27,12 @@
 </div>
 <h2>Preprints and Submitted Papers</h2>
 <ul>
-<li><p><b>Cross Dual Decomposition for Optimizing Liner Shipping Fleet Repositioning Plans</b>, with A. Koberstein
-</p>
-</article> 
-</li>
-</ul>   
-</li>
-</ul>
+<li><p><b>Cross Dual Decomposition for Optimizing Liner Shipping Fleet Repositioning Plans</b>, with A. Koberstein </p>
 <ul>
-<li><p><b>Mitigating ripple and bullwhip effects in the supply chain via capacity allocation and user cooperation</b>, with H. Jahani, D. Ivanov, W. Klibi 
-</p>
+<li><p><b>Mitigating ripple and bullwhip effects in the supply chain via capacity allocation and user cooperation</b>, with H. Jahani, D. Ivanov, W. Klibi </p>
 <ul>
+</li>
+<li>
 <article><p><b>Abstract</b>: 
 Capacity allocation and cooperative users are growing research areas in supply chain (SC) management; however, the consideration of these novel approaches with disruption propagation effects - namely ripple and bullwhip effects - is scarce. In this study, an SC network containing facilities, normal users, and cooperative users is considered in which the cooperative users possess inventories and can help facilities supply normal users as well. We aim to control the ripple effect by considering the robust optimisation approach and dynamically adjusting the disrupted capacity of facilities. We also manage the bullwhip effect by adjusting the inventories of the cooperative users with a multi-stage stochastic programming formulation. The capacity is allocated to each facility in the worst-case scenario to control future capacity disruptions. Therefore, the worst-case capacity allocation and inventory management can confront the facility capacity disruption in both reactive and proactive ways. Regarding the solution approach, a multi-stage stochastic programming and a robust optimisation approach are developed to control random and deep uncertainties. A suitable scenario tree is constructed by generating scenarios using a Latin Hypercube Sampling method and reducing the scenario tree by applying a forward scenario construction technique. To overcome challenges in solving largescale problems, a hybrid dual decomposition algorithm is suggested based on updating Lagrangian multiplier sets with the combination of cutting plane, sub-gradient, and trust region strategies. The proposed solution algorithm is equipped by Rolling Horizon Heuristic to find a proper upper bound. The outcomes of this research can help decision-makers analyse the value of cooperative users in mitigating ripple and bullwhip.
 </p>
@@ -47,9 +42,10 @@ Capacity allocation and cooperative users are growing research areas in supply c
 </li>
 </ul>
 <ul>
-<li><p><b>An Accelerated Cross Decomposition Algorithm for Stochastic Uncapacitated Transportation Location Problem</b>, with M. Bashiri
-</p>
+<li><p><b>An Accelerated Cross Decomposition Algorithm for Stochastic Uncapacitated Transportation Location Problem</b>, with M. Bashiri </p>
 <ul>
+</li>
+<li>
 <article><p><b>Abstract</b>: 
 Decomposition methods are one of the successful methods to solve large-scale MILP problems. These methods can apply to the primal or dual structure of the problems such as L-Shaped decomposition and Lagrangean Relaxation. The cross-decomposition algorithm alternates between Benders decomposition as the primal solution algorithm and Lagrangean relaxation as a dual solution algorithm in a unified approach. In this study, we suggest a cross decomposition algorithm to solve risk-averse two-stage stochastic programming with mixed-integer variables in both first and second stage decisions. Moreover, the lagrangean relaxation is equipped by using a hybrid procedure for updating lagrange multipliers included cutting plane and sub-gradient methods. We benefit from an on-demand accuracy strategy to generate benders optimality cuts related to active partitions of scenarios on an optimal solution where the partitions are refined dynamically within the solution algorithm. In this paper, the capacitated transportation location problem is modeled as a risk-averse two-stage stochastic programming framework to handle the inherent demand uncertainty. In this model, unlike the classic one, constructing distribution channels are investigated as the first stage of decisions. Moreover, the decisions of opening origins and flows between network levels are determined in the second stage. As an application, this problem can be considered in the spreading of pandemic disease, where constructing distribution channels are strategic decisions in such networks. Computational results confirm the efficiency of the proposed algorithm compared with the classic exact solution approaches, even for instances with a large number of scenarios.
 </p>
@@ -61,6 +57,8 @@ Decomposition methods are one of the successful methods to solve large-scale MIL
 <ul>
 <li><p><b>A Lagrangian-Based Heuristic for a Two-Stage Stochastic Multi-District Asset Protection Problem with Assignment of Disaster Response Groups</b>, with S. Kazazi Darani, M. Bashiri, A. Koliousis </p>
 <ul>
+</li>
+<li>
 <article><p><b>Abstract</b>: 
 One of the most tactical decisions in disaster management is assigning Disaster Response Groups (DRG) to predetermined districts. In the response phase, this assignment protects community assets and infrastructures that are under the risk of destruction when a disaster has occurred. Asset protection is continued to protect individuals, equipment and the environment during a disaster until the risk is reduced to an acceptable level. In this paper, a two-stage stochastic mixed-integer model is proposed for the Multi-District Asset Protection Problem (MDAP) with an uncertain time limit. Due to increasing the optimization computational time for large scale cases, a Lagrangian Relaxation Algorithm (LRA) is applied as a solution method, considering the nature of the problem and the mathematical model; first, the model was investigated to choose the most appropriate constraints to be relaxed. Then, relaxed constraints are added to the objective function with Lagrangian multipliers. The problem is solved by a subgradient-based Lagrangian relaxation method while the Lagrangian multipliers are updated concerning the amount of violation of relaxed constraints in each iteration. Finally, to validate the current research, numerical examples for the presented model are solved and consequently, the results of various sensitivity analyses are reported. The computational results indicate both the efficiency and applicability of the proposed model in real-world conditions compared to existing classic models as well as the efficiency of the solution algorithm.
 </p>
