--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,8 @@
 </div>
 <h2>Preprints and Submitted Papers</h2>
 <ul>
-<li><p><b>Cross Dual Decomposition for Optimizing Liner Shipping Fleet Repositioning Plans</b>, with A. Koberstein </p>
+<li><p><b>Cross Dual Decomposition for Optimizing Liner Shipping Fleet Repositioning Plans</b>, with A. Koberstein 
+</p>
 <ul>
 <li><p><b>Mitigating ripple and bullwhip effects in the supply chain via capacity allocation and user cooperation</b>, with H. Jahani, D. Ivanov, W. Klibi </p>
 <ul>
