--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,8 @@
 </div>
 <h2>Preprints and Submitted Papers</h2>
 <ul>
-<li><p><b>Cross Dual Decomposition for Optimizing Liner Shipping Fleet Repositioning Plans</b>, with A. Koberstein </p>
+<li><p><b>Cross Dual Decomposition for Optimizing Liner Shipping Fleet Repositioning Plans</b>, with A. Koberstein
+</p>
 </article> 
 </li>
 </ul>   
