--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,11 @@
 <h2>Preprints and Submitted Papers</h2>
 <ul>
 <li><p><b> Cross Dual Decomposition for Optimizing Liner Shipping Fleet Repositioning Plans</b>, with A. Koberstein </p>
+</article> 
+</li>
+</ul>   
+</li>
+</ul>
 <ul>
 <li><p><b>A Lagrangian-Based Heuristic for a Two-Stage Stochastic Multi-District Asset Protection Problem with Assignment of Disaster Response Groups </b>, with S. Kazazi Darani, M. Bashiri, A. Koliousis </p>
 <ul>
