--- a/talks.html
+++ b/talks.html
@@ -23,11 +23,11 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Invited Talks and Posters</h1>
+<h1>Invited Talks and Presentations</h1>
 </div>
-<h2>Posters</h2>
+<h2>Presentations</h2>
 <ul>
-<li><p><b>Data Driven Optimization</b>, <i>Department of Engineering</i>, The Shahed University, August 21, 2019, Tehran. </p>
+<li><p><b>Data Driven Optimization</b>, <i>Department of Engineering</i>, Shahed University, August 21, 2019, Tehran, Iran. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
