--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ In particular, my research interests include  </p>
 </li>
 </ul>
 <p><a href="publications.html">Find out more</a>.</p>
+<h2>Research Focus Diagram</h2>
+<a href="https://Alirouhani.github.io.github.io/index.html"><img src="Photos/AllRI.png" alt="alt text" width="140px" height="160px" /></a>&nbsp;</td>
 <div id="footer">
 <div id="footer-text">
 Page generated 2020-08-29 14:04:05 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
