--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,7 @@
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
-<div class="menu-item"><a href="talks.html">Talks</a></div>
+<div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-item"><a href="activities.html">Activities</a></div>
 </td>
 <td id="layout-content">
