--- a/projects.html
+++ b/projects.html
@@ -27,9 +27,10 @@
 </div>
 <h2>Presentations</h2>
 <ul>
-<li><p><b>Data Driven Optimization</b>, <i>Department of Engineering</i>, Shahed University, August 21, 2019, Tehran, Iran. </p>
+<li><p><b>Data Driven Optimization</b>, <i>Department of Engineering</i>, Shahed University, October 17, 2019, Tehran, Iran. </p>
 </ul>
-<ul>
+<li><p><b>Unmanned Aerial Vehicles</b>, <i>Department of Engineering</i>, Shahed University, August 21, 2019, Tehran, Iran. </p>
+</ul>
 <h2>Active Prpjects</h2>
 <ul>
 <li><p><b> Stochastic Dynamic Programming </b>, with E. Nikbakhsh </p>
