--- a/activities.html
+++ b/activities.html
@@ -38,7 +38,11 @@
 </ul>
 <h2>Active Prpjects</h2>
 <ul>
-<li><p><b> Stochastic Dynamic Programming </b>, with E. Nikbakhsh </p>
+<li><p><b> Stochastic Dynamic Programming for Asset Liability Management </b>, with E. Nikbakhsh </p>
+</li>
+<li><p><b> Blood Maximum Coverage Problem with Drone Under Uncertainty </b>, with H. Jahani </p>
+</li>
+<li><p><b> Benders and Price Algorithm for Multi-District Asset Protection Problem </b>, with S. Kazazi Darani, M. Bashiri </p>
 </li>
 </ul>
 <div id="footer">
