--- a/activities.html
+++ b/activities.html
@@ -38,7 +38,7 @@
 </ul>
 <h2>Active Prpjects</h2>
 <ul>
-<li><p><b> Stochastic Dynamic Programming for Asset Liability Management </b>, with E. Nikbakhsh </p>
+<li><p><b> Multistage Stochastic Linear Programming Portfolio Optimization </b>, with E. Nikbakhsh </p>
 </li>
 <li><p><b> Blood Maximum Coverage Problem with Drone Under Uncertainty </b>, with H. Jahani </p>
 </li>
