--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@ One of the most tactical decisions in disaster management is assigning Disaster 
 </li>
 </ul>
 <ul>
-<li><p><b> Mitigating ripple and bullwhip effects in the supply chain via capacity allocation and user cooperation</b>, with H. Jahani, D. Ivanov, W. Klibi </p>
+<li><p><b> Mitigating Ripple and Bullwhip Effects in the Supply Chain via Capacity Allocation and User Cooperation </b>, with H. Jahani, D. Ivanov, W. Klibi </p>
 <ul>
 </li>
 <li>
