--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Ali Rouhani</h1>
+</div>
 <table class="imgtable"><tr><td>
+<a href="https://alirouhani.github.io/index.html"><img src="Photos/bio.jpg" alt="alt text" width="140px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p>Graduated Master Student <br />
 E-mail: <a href="mailto:a.rouhani@shahed.ac.ir/">a.rouhani@shahed.ac.ir</a></p>
 </td></tr></table>
