--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://alirouhani.github.io/index.html"><img src="Photos/bio.jpg" alt="alt text" width="100px" height="120px" /></a>&nbsp;</td>
-<td align="left"><p>Graduated Master Student <br />
-E-mail: <a href="mailto:a.rouhani@shahed.ac.ir/">a.rouhani@shahed.ac.ir</a></p>
+<td align="left"><p>Computer Science Ph.D. Student<br />
+E-mail: <a href="mailto:ali.rouhani@umontreal.ca/">ali.rouhani@umontreal.ca</a></p>
 </td></tr></table>
-<a href=" https://scholar.google.com/citations?user=lHCRyh0AAAAJ&hl=en"> <i class="ai ai-google-scholar-square ai-2x"></i></a>
+<a href="https://scholar.google.com/citations?hl=en&user=lHCRyh0AAAAJ&view_op=list_works&sortby=pubdate"> <i class="ai ai-google-scholar-square ai-2x"></i></a>
 <a href="https://www.researchgate.net/profile/Ali_Rouhani2"> <i class="ai ai-researchgate-square ai-2x"></i></a>
 <a href="https://orcid.org/0000-0002-7442-5314"> <i class="ai ai-orcid-square ai-2x"></i></a>
 <a href="https://www.linkedin.com/in/ali-rouhani-5b38026b/"> <i class="fab fa-linkedin fa-2x"></i></a>
