--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ E-mail: <a href="mailto:ali.rouhani@umontreal.ca/">ali.rouhani@umontreal.ca</a><
 <a href="https://orcid.org/0000-0002-7442-5314"> <i class="ai ai-orcid-square ai-2x"></i></a>
 <a href="https://www.linkedin.com/in/ali-rouhani-5b38026b/"> <i class="fab fa-linkedin fa-2x"></i></a>
 <h2>About me</h2>
-<p>I received my M.Sc. in Industrial Engineering from Shahed University in 2018, under supervision of Prof. <a href="https://pureportal.coventry.ac.uk/en/persons/mahdi-bashiri">Mahdi Bashiri</a>. Now, I am a Ph.D. candidate at <a https://diro.umontreal.ca/english/home/">Department of Computer Science and Operations Research</a>, advised by Prof. <a href="https://professeurs.uqam.ca/professeur?c=crainic.teodor">Teodor Gabriel Crainic</a>, Prof. <a href="https://professeurs.uqam.ca/professeur?c=rei.walter">Walter Rei</a>, and Prof. <a href="https://kedge.edu/annuaire/walid-klibi">Walid Klibi</a>.</p>
+<p>I received my M.Sc. in Industrial Engineering from Shahed University in 2018, under supervision of Prof. <a href="https://pureportal.coventry.ac.uk/en/persons/mahdi-bashiri">Mahdi Bashiri</a>. Now, I am a Ph.D. candidate at <a https://diro.umontreal.ca/english/home/">Department of Computer Science and Operations Research</a> in University of Montreal, advised by Prof. <a href="https://professeurs.uqam.ca/professeur?c=crainic.teodor">Teodor Gabriel Crainic</a>, Prof. <a href="https://professeurs.uqam.ca/professeur?c=rei.walter">Walter Rei</a>, and Prof. <a href="https://kedge.edu/annuaire/walid-klibi">Walid Klibi</a>.</p>
 <h2>Research</h2>
 <p>My research focuses on the theoretical and practical aspects of decision-making under uncertainty techniques and developing solution methods for large-size problems. 
 In particular, my research interests include  </p>
