--- a/activities.html
+++ b/activities.html
@@ -26,7 +26,7 @@
 </div>
 <h2>Reviewer</h2>
 <ul>
-<li><p> European Journal Operational Research, International Journal of Production Research, Operational Research, Journal of Quality Engineering and Production Optimization.</p>
+<li><p> European Journal of Operational Research, International Journal of Production Research, Operational Research, Journal of Quality Engineering and Production Optimization.</p>
 </li>
 </ul>
 <h2>Presentations</h2>
